# wlcontrol

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  PLAN.md  README.md  build.rs  meson.build
data/: dev.neoden.wlcontrol.desktop.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: bluetooth-device-row.blp  bluetooth-device-row.ui  bluetooth-page.blp  bluetooth-page.ui  password-dialog.blp  password-dialog.ui  wifi-network-row.blp  wifi-network-row.ui  wifi-page.blp  wifi-page.ui  window.blp  window.ui
src/: application.rs  main.rs  meson.build
src/backend/: manager.rs  mod.rs  store_helpers.rs  types.rs  wifi_backend.rs
src/backend/bluetooth/: backend.rs  device.rs  mod.rs
src/backend/event_loop/: helpers.rs  mod.rs  state.rs  streams.rs
src/backend/wifi/: backend.rs  iwd_agent.rs  iwd_proxy.rs  mod.rs  network.rs
src/ui/: bluetooth_device_row.rs  bluetooth_page.rs  mod.rs  password_dialog.rs  wifi_network_row.rs  wifi_page.rs  window.rs
